commit just before turning project in

--- a/Main.css
+++ b/Main.css
@@ -1,4 +1,4 @@
-
+/*I kinda stopped working on the css after our conversation about what was expected with this assignment*/
 .IMDBlogo { grid-area: IMDBlogo; }
 .search { grid-area: search;
 }
